# TSP

./: .gitignore  Ant_colony.cpp  Ant_colony.h  CMakeLists.txt  Genetic.cpp  Genetic.h  Helper.cpp  Helper.h  LICENSE  Particle.cpp  Particle.h  README.md  TSPWindow.cpp  TSPWindow.h  TSPWindow.ui  ant_colony.cpp  ant_colony.h  dialog.cpp  dialog.h  dialog.ui  genetic.cpp  genetic.h  main.cpp  resource.h  test.csv  tspwindow.cpp  tspwindow.h  tspwindow.ui
config/: tsp_config.ini
src/: AlgoExecuter.cpp  Algorithm.cpp  AlgorithmWorker.cpp  Ant_colony.cpp  Config.cpp  Genetic.cpp  Helper.cpp  Particle.cpp  TSPWindow.cpp  dialog.cpp  main.cpp
src/include/: AlgoExecuter.h  AlgoType.h  Algorithm.h  AlgorithmWorker.h  Ant_colony.h  Config.h  Genetic.h  Helper.h  Particle.h  TSPWindow.h  dialog.h  resource.h
src/ui/: TSPWindow.ui  dialog.ui
